fixing logo not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,8 @@ h4 {
 
 /* header */
 #master { 
-  background: url("../images/logo.png"); 
+  /* background: url("../images/logo.png");  */
+  background-image: url("../../assets/images/logo.jpg");
   position: fixed;
   z-index: 99;
   width: 100%;
